--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="container">
       <a class="navbar-brand" href="index.html">ShopEasy</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -26,7 +26,7 @@
   </nav>
 
   <!-- Contact Section -->
-  <div class="container mt-5">
+  <div class="container" style="margin-top: 100px;">
     <h2 class="text-center mb-4">Contact Us</h2>
     <div class="row">
       <div class="col-md-6 mx-auto">
