--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="container">
       <a class="navbar-brand" href="index.html">ShopEasy</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -26,19 +26,33 @@
     </div>
   </nav>
 
-  <!-- Hero Section -->
-  <div class="container mt-4">
-    <div class="row">
-      <div class="col-md-6">
-        <h1>Welcome to ShopEasy</h1>
-        <p>Your one-stop shop for all your needs!</p>
-        <a href="shop.html" class="btn btn-primary">Shop Now</a>
-      </div>
-      <div class="col-md-6">
-        <img src="https://via.placeholder.com/500x300" alt="Shopping" class="img-fluid">
-      </div>
+<!-- Hero Section -->
+<div class="container" style="margin-top: 100px;">
+  <div class="row align-items-center">
+    <!-- Text Section -->
+    <div class="col-lg-6 col-md-6 col-12">
+      <h1 class="mb-4">Welcome to ShopEasy</h1>
+      <p class="mb-4">
+        Your one-stop shop for all your needs!  
+        At ShopEasy, we are dedicated to delivering the best shopping experience.   
+        <ul type="square">
+          <li><b>Wide Product Range:</b> From everyday essentials to exclusive items, find everything you need in one place.</li>
+            <li><b>Secure Payments:</b> Enjoy safe and hassle-free transactions with multiple payment options.</li>
+            <li>
+            <b>Fast Delivery:</b> Get your orders delivered quickly and reliably to your doorstep.</li>
+            <li>
+            <b>24/7 Customer Support:</b> Our team is always available to assist you with any questions or concerns.</li>
+        </ul>
+        
+      </p>
+      <a href="shop.html" class="btn btn-primary btn-lg">Shop Now</a>
+    </div>
+    <!-- Image Section -->
+    <div class="col-lg-6 col-md-6 col-12 text-center">
+      <img src="img1.jpg" alt="Shopping" class="img-fluid rounded mt-3 mt-md-0">
     </div>
   </div>
+</div>
 
   <!-- Footer -->
   <div class="bg-light mt-5 p-3 text-center">
