--- a/shop.html
+++ b/shop.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Shop - ShopEasy</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+
 <body>
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="container">
       <a class="navbar-brand" href="index.html">ShopEasy</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -24,45 +26,82 @@
       </div>
     </div>
   </nav>
-
-  <!-- Product Section -->
-  <div class="container mt-5">
-    <h2 class="text-center mb-4">Our Products</h2>
-    <div class="row">
-      <!-- Product Card -->
-      <div class="col-md-4">
-        <div class="card">
-          <img src="https://via.placeholder.com/150" class="card-img-top" alt="Product">
-          <div class="card-body">
-            <h5 class="card-title">Product 1</h5>
-            <p class="card-text">$20.00</p>
-            <a href="#" class="btn btn-primary">Add to Cart</a>
-          </div>
+  
+  <!-- Hero Section -->
+  <header class="bg-primary text-white text-center py-5" style="margin-top: 60px;">
+    <h1>Welcome to ShopEasy</h1>
+    <p>Your one-stop solution for shopping online</p>
+   
+  </header>
+<!-- Product Section -->
+<div class="container mt-5">
+  <h2 class="text-center mb-4">Our Products</h2>
+  <div class="row">
+    <!-- Product Card -->
+    <div class="col-lg-4 col-md-6 mb-4">
+      <div class="card">
+        <img src="mob.jpg" class="card-img-top" alt="Product">
+        <div class="card-body">
+          <h5 class="card-title">Mobile</h5>
+          <p class="card-text">15000</p>
+          <a href="#" class="btn btn-primary">Add to Cart</a>
         </div>
       </div>
-      <!-- Repeat Product Cards -->
-      <div class="col-md-4">
-        <div class="card">
-          <img src="https://via.placeholder.com/150" class="card-img-top" alt="Product">
-          <div class="card-body">
-            <h5 class="card-title">Product 2</h5>
-            <p class="card-text">$25.00</p>
-            <a href="#" class="btn btn-primary">Add to Cart</a>
-          </div>
+    </div>
+    <!-- Repeat Product Cards -->
+    <div class="col-lg-4 col-md-6 mb-4">
+      <div class="card">
+        <img src="tab.jpg" class="card-img-top" alt="Product">
+        <div class="card-body">
+          <h5 class="card-title">Tablet</h5>
+          <p class="card-text">8000</p>
+          <a href="#" class="btn btn-primary">Add to Cart</a>
         </div>
       </div>
-      <div class="col-md-4">
-        <div class="card">
-          <img src="https://via.placeholder.com/150" class="card-img-top" alt="Product">
-          <div class="card-body">
-            <h5 class="card-title">Product 3</h5>
-            <p class="card-text">$30.00</p>
-            <a href="#" class="btn btn-primary">Add to Cart</a>
-          </div>
+    </div>
+    <div class="col-lg-4 col-md-6 mb-4">
+      <div class="card">
+        <img src="Lap.jpg" class="card-img-top" alt="Product">
+        <div class="card-body">
+          <h5 class="card-title">Laptop</h5>
+          <p class="card-text">35000</p>
+          <a href="#" class="btn btn-primary">Add to Cart</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-4 col-md-6 mb-4">
+      <div class="card">
+        <img src="mob.jpg" class="card-img-top" alt="Product">
+        <div class="card-body">
+          <h5 class="card-title">Mobile</h5>
+          <p class="card-text">15000</p>
+          <a href="#" class="btn btn-primary">Add to Cart</a>
+        </div>
+      </div>
+    </div>
+    <!-- Repeat Product Cards -->
+    <div class="col-lg-4 col-md-6 mb-4">
+      <div class="card">
+        <img src="tab.jpg" class="card-img-top" alt="Product">
+        <div class="card-body">
+          <h5 class="card-title">Tablet</h5>
+          <p class="card-text">8000</p>
+          <a href="#" class="btn btn-primary">Add to Cart</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-4 col-md-6 mb-4">
+      <div class="card">
+        <img src="Lap.jpg" class="card-img-top" alt="Product">
+        <div class="card-body">
+          <h5 class="card-title">Laptop</h5>
+          <p class="card-text">35000</p>
+          <a href="#" class="btn btn-primary">Add to Cart</a>
         </div>
       </div>
     </div>
   </div>
+</div>
 
   <!-- Footer -->
   <footer class="bg-light mt-5 p-3 text-center">
@@ -71,4 +110,5 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
