--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <title>Home - ShopEasy</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
+   <script>
+    document.addEventListener('contextmenu', function(e) {
+      e.preventDefault();
+      alert('Right-click is disabled on this page.');
+    });
+  </script>
 </head>
 <body>
   <!-- Navbar -->
