--- a/shop.html
+++ b/shop.html
@@ -6,15 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Shop - ShopEasy</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-   <script>
+  <script>
     document.addEventListener('contextmenu', function(e) {
       e.preventDefault();
       alert('Right-click is disabled on this page.');
     });
   </script>
+
+
 </head>
 
-<body>
+<body style="background-image: url(bg.jpeg);background-attachment: fixed;">
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="container">
@@ -34,24 +36,27 @@
   </nav>
   
   <!-- Hero Section -->
-  <header class="bg-primary text-white text-center py-5" style="margin-top: 60px;">
-    <h1>Welcome to ShopEasy</h1>
+  <header class="text-white text-center py-5" style="margin-top: 55px; background-color: rgba(0, 0, 0, 0.6); height: 250px;">
+    <h1 class="pt-5">Welcome to ShopEasy</h1>
     <p>Your one-stop solution for shopping online</p>
    
   </header>
 <!-- Product Section -->
-<div class="container mt-5">
-  <h2 class="text-center mb-4">Our Products</h2>
+ <div class="container-fluid bg-white">
+<div class="container ">
+  <h2 class="text-center mb-4 pt-5">Our Products</h2>
   <div class="row">
     <!-- Product Card -->
     <div class="col-lg-4 col-md-6 mb-4">
       <div class="card">
-        <img src="mob.jpg" class="card-img-top" alt="Product">
+        <a href="product.html">
+        <img src="mob.jpg" class="card-img-top" alt="Product"> </a>
         <div class="card-body">
           <h5 class="card-title">Mobile</h5>
           <p class="card-text">15000</p>
           <a href="#" class="btn btn-primary">Add to Cart</a>
         </div>
+       
       </div>
     </div>
     <!-- Repeat Product Cards -->
@@ -75,42 +80,53 @@
         </div>
       </div>
     </div>
-    <div class="col-lg-4 col-md-6 mb-4">
+    <div class="col-lg-3 col-md-6 mb-4">
       <div class="card">
-        <img src="mob.jpg" class="card-img-top" alt="Product">
+        <img src="headphone.png" class="card-img-top" alt="Product">
         <div class="card-body">
-          <h5 class="card-title">Mobile</h5>
-          <p class="card-text">15000</p>
+          <h5 class="card-title">Headphone</h5>
+          <p class="card-text">1000</p>
           <a href="#" class="btn btn-primary">Add to Cart</a>
         </div>
       </div>
     </div>
     <!-- Repeat Product Cards -->
-    <div class="col-lg-4 col-md-6 mb-4">
+    <div class="col-lg-3 col-md-6 mb-4">
       <div class="card">
-        <img src="tab.jpg" class="card-img-top" alt="Product">
+        <img src="neck.jpg" class="card-img-top" alt="Product">
         <div class="card-body">
-          <h5 class="card-title">Tablet</h5>
-          <p class="card-text">8000</p>
+          <h5 class="card-title">NeckBand</h5>
+          <p class="card-text">800</p>
           <a href="#" class="btn btn-primary">Add to Cart</a>
         </div>
       </div>
     </div>
-    <div class="col-lg-4 col-md-6 mb-4">
+    <div class="col-lg-3 col-md-6 mb-4">
       <div class="card">
-        <img src="Lap.jpg" class="card-img-top" alt="Product">
+        <img src="earbud.jpg" class="card-img-top" alt="Product">
         <div class="card-body">
-          <h5 class="card-title">Laptop</h5>
-          <p class="card-text">35000</p>
+          <h5 class="card-title">Earbud</h5>
+          <p class="card-text">500</p>
+          <a href="#" class="btn btn-primary">Add to Cart</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-3 col-md-6 mb-4">
+      <div class="card">
+        <img src="charg.jpg" class="card-img-top" alt="Product">
+        <div class="card-body">
+          <h5 class="card-title">Charger</h5>
+          <p class="card-text">350</p>
           <a href="#" class="btn btn-primary">Add to Cart</a>
         </div>
       </div>
     </div>
   </div>
 </div>
+</div>
 
   <!-- Footer -->
-  <footer class="bg-light mt-5 p-3 text-center">
+  <footer class="bg-light pt-5 p-3 text-center">
     <p>&copy; 2025 ShopEasy. All Rights Reserved.</p>
   </footer>
 
