--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact - ShopEasy</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-   <script>
-    document.addEventListener('contextmenu', function(e) {
-      e.preventDefault();
-      alert('Right-click is disabled on this page.');
-    });
+  <script>
+    // Function to show an alert after the form is submitted
+    function showAlert(event) {
+      event.preventDefault(); // Prevent form from refreshing the page
+      alert('Your message has been sent successfully!');
+    }
   </script>
 </head>
 <body>
@@ -36,7 +37,7 @@
     <h2 class="text-center mb-4">Contact Us</h2>
     <div class="row">
       <div class="col-md-6 mx-auto">
-        <form>
+        <form onsubmit="showAlert(event)">
           <div class="mb-3">
             <label for="name" class="form-label">Name</label>
             <input type="text" class="form-control" id="name" placeholder="Your Name">
