--- a/cart.html
+++ b/cart.html
@@ -1,17 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cart - ShopEasy</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-   <script>
-    document.addEventListener('contextmenu', function(e) {
-      e.preventDefault();
-      alert('Right-click is disabled on this page.');
-    });
+  <script>
+    // JavaScript Functions for Cart Page
+    function updateCart() {
+      const rows = document.querySelectorAll(".cart-item");
+      let total = 0;
+
+      rows.forEach((row) => {
+        const price = parseFloat(row.querySelector(".price").innerText);
+        const quantity = parseInt(row.querySelector(".quantity").value);
+
+        if (isNaN(quantity) || quantity <= 0) {
+          alert("Please enter a valid quantity for all items.");
+          return;
+        }
+
+        const subtotal = price * quantity;
+        row.querySelector(".subtotal").innerText = subtotal.toFixed(2);
+        total += subtotal;
+      });
+
+      // Update total price
+      document.getElementById("total-price").innerText = total.toFixed(2);
+    }
+
+    function submitCart() {
+      const rows = document.querySelectorAll(".cart-item");
+
+      // Ensure all quantities are valid
+      for (let row of rows) {
+        const quantity = parseInt(row.querySelector(".quantity").value);
+
+        if (isNaN(quantity) || quantity <= 0) {
+          alert("Please correct invalid quantities before proceeding.");
+          return;
+        }
+      }
+
+      alert("Cart successfully submitted!");
+    }
+
+    function removeItem(row) {
+      row.remove();
+      updateCart();
+    }
   </script>
 </head>
+
 <body>
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -35,7 +76,7 @@
   <div class="container" style="margin-top: 100px;">
     <h2 class="text-center mb-4">Your Cart</h2>
     <table class="table">
-
+      <thead>
         <tr>
           <th scope="col">Product</th>
           <th scope="col">Price in (Rs.)</th>
@@ -43,47 +84,48 @@
           <th scope="col">Total</th>
           <th scope="col">Action</th>
         </tr>
-
-        <tr>
+      </thead>
+      <tbody>
+        <tr class="cart-item">
           <td>Mobile</td>
-          <td>15000</td>
+          <td class="price">15000</td>
           <td>
-            <input type="number" class="form-control" value="1" min="1">
+            <input type="number" class="form-control quantity" value="1" min="1" onchange="updateCart()">
           </td>
-          <td>15000</td>
+          <td class="subtotal">15000</td>
           <td>
-            <button class="btn btn-danger btn-sm">Remove</button>
+            <button class="btn btn-danger btn-sm" onclick="removeItem(this.closest('tr'))">Remove</button>
           </td>
         </tr>
-        <tr>
+        <tr class="cart-item">
           <td>Tab</td>
-          <td>8000</td>
+          <td class="price">8000</td>
           <td>
-            <input type="number" class="form-control" value="1" min="1">
+            <input type="number" class="form-control quantity" value="1" min="1" onchange="updateCart()">
           </td>
-          <td>8000</td>
+          <td class="subtotal">8000</td>
           <td>
-            <button class="btn btn-danger btn-sm">Remove</button>
+            <button class="btn btn-danger btn-sm" onclick="removeItem(this.closest('tr'))">Remove</button>
           </td>
         </tr>
-        <tr>
-            <td>Laptop</td>
-            <td>35000</td>
-            <td>
-              <input type="number" class="form-control" value="1" min="1">
-            </td>
-            <td>35000</td>
-            <td>
-              <button class="btn btn-danger btn-sm">Remove</button>
-            </td>
-          </tr>
-  
+        <tr class="cart-item">
+          <td>Laptop</td>
+          <td class="price">35000</td>
+          <td>
+            <input type="number" class="form-control quantity" value="1" min="1" onchange="updateCart()">
+          </td>
+          <td class="subtotal">35000</td>
+          <td>
+            <button class="btn btn-danger btn-sm" onclick="removeItem(this.closest('tr'))">Remove</button>
+          </td>
+        </tr>
+      </tbody>
     </table>
     <div class="d-flex justify-content-center">
-      <h4>Total: 58000</h4>
+      <h4>Total: ₹<span id="total-price">58000</span></h4>
     </div>
     <div class="d-flex justify-content-center mt-3">
-      <button class="btn btn-success">Proceed to Checkout</button>
+      <button class="btn btn-success" onclick="submitCart()">Proceed to Checkout</button>
     </div>
   </div>
 
@@ -94,4 +136,5 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
